Wed Dec  5 18:43:45 CET 2001 Daniel Veillard <daniel@veillard.com>

	* breakpoint/Makefile.am breakpoint/deprecated.c: replaced
	  the whole module with just the entry points.

Fri Nov 30 18:59:50 CET 2001 Daniel Veillard <daniel@veillard.com>

	* libxslt/transform.c: Nik Clayton found a bug introduced in
	  1.0.8 when using doctypes for HTML output

Fri Nov 30 12:59:05 CET 2001 Daniel Veillard <daniel@veillard.com>

	* libxslt/attributes.c libxslt/transform.c libxslt/xsltutils.c
	  libxslt/xsltutils.h: revamped the mechanism to hook a debuger
	  to use a callback setup function, deprecating libxsltbreakpoint
	* xsltproc/Makefile.am configure.in breakpoint/Makefile.am: removing
	  dependancies on libxsltbreakpoint

Thu Nov 29 09:52:38 CET 2001 Daniel Veillard <daniel@veillard.com>

        Build patch from  Peter Williams  <peterw@ximian.com>
	* breakpoint/Makefile.am (INCLUDES): meed $(top_builddir)/libxslt.
	* doc/Makefile.am ($(PAGES)): xslt.html and site.xsl live in
	  $(srcdir), not the build directory.

Wed Nov 28 11:17:04 CET 2001 Daniel Veillard <daniel@veillard.com>

	* doc/FAQ.html doc/site.xsl doc/*.html doc/Makefile.am: added an FAQ

Tue Nov 27 21:15:43 MST 2001 John Fleck <jfleck@inkstain.net>

	* doc/xsltproc.xml, xsltproc.1, xsltproc.html - documenting new
	xsltproc return codes, per
	https://bugzilla.redhat.com/bugzilla/show_bug.cgi?id=56649 

Tue Nov 27 22:16:50 CET 2001 Daniel Veillard <daniel@veillard.com>

	* libxslt/pattern.c: Marc Tardif provided a patch to use as
	  much as 40 steps. A dynamic alloc would still be better

Mon Nov 26 21:45:07 CET 2001 Daniel Veillard <daniel@veillard.com>

	* xsltproc/xsltproc.c: return useful code signaling error conditions
	  closing #56649 (RH)

Mon Nov 26 13:14:14 CET 2001 Daniel Veillard <daniel@veillard.com>

	* configure.in libxslt/xsltwin32config.h: preparing release of 1.0.8

Mon Nov 26 11:21:27 CET 2001 Daniel Veillard <daniel@veillard.com>
